--- a/css/style.css
+++ b/css/style.css
@@ -235,15 +235,11 @@
   height: 30px;
   position: relative;
   top: 9px;
-  right: 150px;
+/*   right: 115px; */
   border-radius: 5px;
-  transition: right 0.5s;
 }
 
 #profName{
-  position: relative;
-  left: 30px;
-  transition: left 0.5s;
 }
 
 #inner{
